# TorchVisionLab

./: .gitignore  README.md  pyproject.toml  setup.sh
01_basics/: 00_introduction_to_machine_learning.ipynb  01_pytorch_fundamentals.ipynb  02_neural_networks_theory.ipynb  03_neural_networks_intro.ipynb  04_classification.ipynb  05_loss_functions_and_optimizers.ipynb  06_datasets_and_dataloaders.ipynb
02_computer_vision/: 01_computer_vision.ipynb  02_transfer_learning.ipynb  03_experiment_tracking_tensorboard.ipynb  05_experiment_tracking_mlflow.ipynb
10_projects/: 01_pytorch_lightning_tutorial.ipynb
12_assets/: forward_pass.mov  loss_function.mov  restaurant_decision.mov
13_datasets/: student_exam_data.csv  student_exams_advanced_data.csv
